refactor!: package split + issue #8 review fixes; sync spec to v2-2026-07-20T094852Z (#10)
Co-authored-by: Claude <noreply@anthropic.com>